Refactored geo service

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ export USER="postgres"
 export PASSWORD="1234"
 export NAME="disasterdb"
 export SECRET="denzilwashere"
+export FROMEMAILADD="denzilpinto22@gmail.com"
+export FROMPASSWORD="htcy mrxt ubph azbd"
